--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         "size": "full",
         "action": {
           "type": "uri",
-          "uri": "https://lin.ee/CHxrvdj"
+          "uri": "bit.ly/3FDNS1n"
         },
         "aspectRatio": "1:1",
         "backgroundColor": "#000000"
@@ -84,7 +84,7 @@
             "gravity": "center",
             "action": {
               "type": "uri",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             }
           },
           {
@@ -119,7 +119,7 @@
             "action": {
               "type": "uri",
               "label": "กดรับเครดิตฟรี",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             },
             "style": "secondary",
             "color": "#FFCC33",
@@ -150,7 +150,7 @@
         "size": "full",
         "action": {
           "type": "uri",
-          "uri": "https://lin.ee/CHxrvdj"
+          "uri": "bit.ly/3FDNS1n"
         },
         "aspectRatio": "1:1",
         "backgroundColor": "#000000"
@@ -169,7 +169,7 @@
             "gravity": "center",
             "action": {
               "type": "uri",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             }
           },
           {
@@ -204,7 +204,7 @@
             "action": {
               "type": "uri",
               "label": "รับโปรโมชั่นทุนน้อย",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             },
             "style": "secondary",
             "color": "#FFCC33",
@@ -235,7 +235,7 @@
         "size": "full",
         "action": {
           "type": "uri",
-          "uri": "https://lin.ee/CHxrvdj"
+          "uri": "bit.ly/3FDNS1n"
         },
         "aspectRatio": "1:1",
         "backgroundColor": "#000000"
@@ -254,7 +254,7 @@
             "gravity": "center",
             "action": {
               "type": "uri",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             }
           },
           {
@@ -289,7 +289,7 @@
             "action": {
               "type": "uri",
               "label": "กดรับโบนัส 100%",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             },
             "style": "secondary",
             "color": "#FFCC33",
@@ -320,7 +320,7 @@
         "size": "full",
         "action": {
           "type": "uri",
-          "uri": "https://lin.ee/CHxrvdj"
+          "uri": "bit.ly/3FDNS1n"
         },
         "aspectRatio": "1:1",
         "backgroundColor": "#000000"
@@ -339,7 +339,7 @@
             "gravity": "center",
             "action": {
               "type": "uri",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             }
           },
           {
@@ -374,7 +374,7 @@
             "action": {
               "type": "uri",
               "label": "กดรับโบนัส 50%",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             },
             "style": "secondary",
             "color": "#FFCC33",
@@ -405,7 +405,7 @@
         "size": "full",
         "action": {
           "type": "uri",
-          "uri": "https://lin.ee/CHxrvdj"
+          "uri": "bit.ly/3FDNS1n"
         },
         "aspectRatio": "1:1",
         "backgroundColor": "#000000"
@@ -424,7 +424,7 @@
             "gravity": "center",
             "action": {
               "type": "uri",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             }
           },
           {
@@ -459,7 +459,7 @@
             "action": {
               "type": "uri",
               "label": "กดรับโบนัส 10%",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             },
             "style": "secondary",
             "color": "#FFCC33",
@@ -490,7 +490,7 @@
         "size": "full",
         "action": {
           "type": "uri",
-          "uri": "https://lin.ee/CHxrvdj"
+          "uri": "bit.ly/3FDNS1n"
         },
         "aspectRatio": "1:1",
         "backgroundColor": "#000000"
@@ -509,7 +509,7 @@
             "gravity": "center",
             "action": {
               "type": "uri",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             }
           },
           {
@@ -544,7 +544,7 @@
             "action": {
               "type": "uri",
               "label": "กดฝาก 300 รับ 400",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             },
             "style": "secondary",
             "color": "#FFCC33",
@@ -575,7 +575,7 @@
         "size": "full",
         "action": {
           "type": "uri",
-          "uri": "https://lin.ee/CHxrvdj"
+          "uri": "bit.ly/3FDNS1n"
         },
         "aspectRatio": "1:1",
         "backgroundColor": "#000000"
@@ -594,7 +594,7 @@
             "gravity": "center",
             "action": {
               "type": "uri",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             }
           },
           {
@@ -629,7 +629,7 @@
             "action": {
               "type": "uri",
               "label": "กดฝาก 500 รับ 700",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             },
             "style": "secondary",
             "color": "#FFCC33",
@@ -660,7 +660,7 @@
         "size": "full",
         "action": {
           "type": "uri",
-          "uri": "https://lin.ee/CHxrvdj"
+          "uri": "bit.ly/3FDNS1n"
         },
         "aspectRatio": "1:1",
         "backgroundColor": "#000000"
@@ -679,7 +679,7 @@
             "gravity": "center",
             "action": {
               "type": "uri",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             }
           },
           {
@@ -714,7 +714,7 @@
             "action": {
               "type": "uri",
               "label": "กดฝากไม่รับโบนัส",
-              "uri": "https://lin.ee/CHxrvdj"
+              "uri": "bit.ly/3FDNS1n"
             },
             "style": "secondary",
             "color": "#FFCC33",
